--- a/CSS/flip-card/style.css
+++ b/CSS/flip-card/style.css
@@ -25,8 +25,10 @@ body {
   height: 100%;
   transform-style: preserve-3d;
   position: relative;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
+
   transition: 0.6s ease-in-out;
+  border-radius: 10px;
 }
 
 .front,
@@ -34,6 +36,7 @@ body {
   position: absolute;
   background-color: #acaadc;
   backface-visibility: hidden;
+  border-radius: 10px;
 }
 
 .front {
@@ -45,6 +48,7 @@ body {
   max-width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 .back {
