--- a/CSS/loading-animation-1/style.css
+++ b/CSS/loading-animation-1/style.css
@@ -23,17 +23,45 @@ h1 {
 }
 
 span {
-  animation: removeLetter 1.5s ease-in-out alternate infinite;
+  animation: animate 1s alternate infinite;
 }
 
-@keyframes removeLetter {
+@keyframes animate {
   from {
-    transform: translate(0px, 0px) rotate(0deg);
     opacity: 1;
+    transform: translateY(0);
   }
 
   to {
-    transform: translateX(-20px) rotate(30deg);
-    opacity: 0;
+    opacity: 0.3;
+    transform: translateY(-20px);
   }
+}
+
+span:nth-child(1) {
+  animation-delay: 0.1s;
+}
+
+span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+span:nth-child(3) {
+  animation-delay: 0.3s;
+}
+
+span:nth-child(4) {
+  animation-delay: 0.4s;
+}
+
+span:nth-child(5) {
+  animation-delay: 0.5s;
+}
+
+span:nth-child(6) {
+  animation-delay: 0.6s;
+}
+
+span:nth-child(7) {
+  animation-delay: 0.7s;
 }
