--- a/JS/draggable-slider/assets/sass/style.scss
+++ b/JS/draggable-slider/assets/sass/style.scss
@@ -45,8 +45,8 @@ main {
     }
   }
 
-  .left,
-  .right {
+  .left-nav,
+  .right-nav {
     width: 40px;
     height: 40px;
     top: 50%;
@@ -65,11 +65,11 @@ main {
     }
   }
 
-  .left {
+  .left-nav {
     left: -10px;
   }
 
-  .right {
+  .right-nav {
     right: -10px;
   }
 
