--- a/JS/puzzle-game/style.css
+++ b/JS/puzzle-game/style.css
@@ -10,6 +10,7 @@
   margin: 0;
   box-sizing: border-box;
   transition: 1s;
+  font-family: "Poppins", sans-serif;
 }
 
 img {
@@ -37,8 +38,12 @@ html {
   height: 100%;
 }
 
-body {
-  font-family: "Poppins", sans-serif;
+body.win {
+  max-height: 100vh;
+}
+body.win .win-screen {
+  opacity: 1;
+  pointer-events: all;
 }
 
 .win-screen {
@@ -54,10 +59,6 @@ body {
   flex-direction: column;
   gap: 30px;
   background: linear-gradient(to bottom right, rgb(255, 196, 0), rgb(255, 153, 0));
-}
-.win-screen.win {
-  opacity: 1;
-  pointer-events: all;
 }
 .win-screen h2 {
   font-size: 2rem;
