--- a/JS/draggable-slider/assets/sass/style.scss
+++ b/JS/draggable-slider/assets/sass/style.scss
@@ -77,6 +77,7 @@ main {
     cursor: grab;
     user-select: none;
     width: 100%;
+    scroll-behavior: smooth;
     overflow: hidden;
     scroll-snap-type: x mandatory;
     display: grid;
